textarea wrap fix

--- a/src/Components/Estimation/estimationStyle.scss
+++ b/src/Components/Estimation/estimationStyle.scss
@@ -137,7 +137,7 @@
 }
 
 .measure-width {
-  //visibility: hidden;
+  visibility: hidden;
   width: calc(100% + 600px);
   white-space: nowrap;
 }
